# inm-rspace

./: .buildinfo  LICENSE  README.md  build_docs.sh  genindex.html  index.html  inm_rspace.core.html  inm_rspace.daemon.html  inm_rspace.html  inm_rspace.workflow.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.txt
.doctrees/: environment.pickle  index.doctree  inm_rspace.core.doctree  inm_rspace.daemon.doctree  inm_rspace.doctree  inm_rspace.workflow.doctree  modules.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/inm_rspace/: core.html  workflow.html
_sources/: index.rst.txt  inm_rspace.core.rst.txt  inm_rspace.rst.txt  inm_rspace.workflow.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  inm_rspace.core.rst  inm_rspace.daemon.rst  inm_rspace.rst
examples/: data.csv  default_workflow_form.json  form_basics.json  manage_forms.py  metadata.json  plot_csv.py  workflow_PlotColumnsCSV.py
inm_rspace/: __init__.py  core.py  daemon.py  pyrightconfig.json  workflow.py
