# poetry setup: https://stackoverflow.com/questions/68882603/using-python-poetry-to-publish-to-test-pypi-org
# poetry docs: https://python-poetry.org/docs/

[tool.poetry]
name = "inm-rspace"
version = "0.2"
description = ""
authors = ["Christian Müller"]
license = "LICENSE"
readme = "README.md"

[project]
dependencies = [
  "python>=3.9",
  "numpy>=1.23",
  "rspace-client", 
  "matplotlib",
  "pandas"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
