# poetry setup: https://stackoverflow.com/questions/68882603/using-python-poetry-to-publish-to-test-pypi-org
# poetry docs: https://python-poetry.org/docs/

[tool.poetry]
name = "inm-rspace"
version = "0.4.1"
description = "Tools for working with the RSpace ELN"
authors = ["Christian Müller"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sintharic/inm-rspace"
repository = "https://github.com/sintharic/inm-rspace"
documentation = "https://sintharic.github.io/inm-rspace"
keywords = ["eln", "rspace", "science", "notebook"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23"
rspace-client = "*"
matplotlib = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
